--- a/Jenkinsfile.template
+++ b/Jenkinsfile.template
@@ -1,8 +1,6 @@
 pipeline {
     agent { 
-        node {
-            label 'jenkins-agent-goes-here'
-            }
+        node any
       }
     stages {
         stage('Build') {
@@ -17,7 +15,7 @@ pipeline {
             steps {
                 echo "Testing.."
                 sh '''
-                echo "doing test stuff..
+                echo "doing test stuff.."
                 '''
             }
         }
