--- a/myApp/pom.xml
+++ b/myApp/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>cucumber-testng</artifactId>
             <version>7.15.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.16.1</version>
+        </dependency>
 
     </dependencies>
 
