--- a/myApp/pom.xml
+++ b/myApp/pom.xml
@@ -36,6 +36,13 @@
             <version>4.16.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.6.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
