--- a/myApp/pom.xml
+++ b/myApp/pom.xml
@@ -43,6 +43,14 @@
             <version>5.6.2</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-picocontainer -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-picocontainer</artifactId>
+            <version>7.15.0</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
